# CoordinatedSchematization

./: CMakeLists.txt  README.md
cmake/: CopyLinkedTargetDlls.cmake  InstallDependency.cmake
include/SchematLib/Algorithms/: ComputeThroughTrajectories.h  MMTrajectoryPreprocess.h  MapSimplificationPipeline.h  PathMapperAccepIterator.h  PipelineBlocks.h
include/SchematLib/IO/: GraphTrajectoryCsvReader.h  OffroadElementsIO.h  ReadGeneralization.h  ReadMMTrajectories.h  ReadWriteOsmMap.h  settings_io.h
include/SchematLib/MapSimplification/: BboxFaceMerge.h  Degree2VertexPreprocess.h  EdgeBoxMerger.h  EdgeTrackingObserver.h  FaceMergeStrategies.h  FaceMergeTraits.h  FaceMerger.h  GcppGraphInterfaceImpl.h  GraphInterface.h  InefficientArrangementSetup.h  LargestConnectedComponent.h  PathMapper.h  RemoveFaceTendrils.h  RemoveTendrils.h  SetupModifiedArrangement.h  SimplficiationObserver.h  SimplificationTraits.h  SpecialEdgeIdFunctions.h  VertexEdgeMerger.h  VertexMerger.h
include/SchematLib/MeesGeneralization/: EmbeddedBoostImpl.h  GetSuperGraph.h  GraphInterface.h  GreedyTrajectoryPicker.h  MostCoveredHeuristic.h  RPRPG.h  StrokePicker.h
include/SchematLib/MeesGeneralization/DS/: DummyGraph.h  MultiPropertyMap.h
include/SchematLib/MeesGeneralization/SecondaryAlgs/: AStar.h  BronKerbosch.h  ComponentCounter.h  ComputeCentrality.h  ConstructStrokes.h  DiscreteFrechet.h  RangeIterator.h
include/SchematLib/MeesGeneralization/Traits/: EverythingTraits.h  GeometryBackendTraits.h  GraphHopperProbeTraits.h  GraphHopperTrajectoryTraits.h  HereProbeTraitsNoHeader.h  HereTrajectoryTraitsNoHeader.h  IntervalTraits.h  OutlierDetectionTraits.h  TaxiProbeTraits.h  TaxiTrajTraits.h
include/SchematLib/Models/: BaseTypes.h  BidirectionalCanonicalGraph.h  EmbeddedGraph.h  SchematizationStages.h
include/SchematLib/TrajectorySchematization/: BidirectionalBruteforceTrajectoryBundler.h  BidirectionalTrajectoryBundler.h  MapTrajectoriesToFaces.h  OffRoadSegmentation.h  OffroadTraits.h  TrajectoryBundleTraits.h  TrajectoryBundler.h
src/Algorithms/: MapSimplificationPipeline.cpp
src/IO/: ReadGeneralization.cpp  ReadWriteOsmMap.cpp
src/MapSimplification/: EdgeTrackingObserver.cpp
src/Models/: BidirectionalCanonicalGraph.cpp  EmbeddedGraph.cpp  SchematizationStages.cpp
